objects/firepond__Pricing_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CHF__c</fullName>
        <label>CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <label>EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <label>GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JPY__c</fullName>
        <label>JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>